# Data-Processing-on-Modern-Hardware

./: README.md
assignment-1-cache-awareness-main/: .gitlab-ci.yml  Makefile  ReadMe.md  assignment  tester
assignment-1-cache-awareness-main/include/: arrper.h  cache_access.h  time_measure.h
assignment-1-cache-awareness-main/src/: arrper.c  cache_access.c  main.c  tester.c
assignment-2-query-execution-models-main/: .gitlab-ci.yml  CMakeLists.txt  README.md  Report Query execution models.md  plot.py  runtime.eps
assignment-2-query-execution-models-main/include/: BaseOperator.h  DBData.h  Operators.h  Util.h  mappedmalloc.h  primitives.h
assignment-2-query-execution-models-main/src/: BaseOperator.cpp  DBData.cpp  OperatorsColumnar.cpp  OperatorsVector.cpp  OperatorsVolcano.cpp  WeeDB.cpp
assignment-2-query-execution-models-main/test/: WeeDB.cpp
assignment-3-hardware-optimized-hash-joins-main/: .gitlab-ci.yml  Assignment3 - Hardware optimized hash joins.md  CMakeLists.txt  README.md  plot_radix_bits.py  plot_relation_size.py
assignment-3-hardware-optimized-hash-joins-main/include/: OptimizedHashJoins.hpp  Relation.hpp  perfEvent.hpp
assignment-3-hardware-optimized-hash-joins-main/src/: OptimizedHashJoins.cpp  main.cpp
assignment-3-hardware-optimized-hash-joins-main/test/: OptimizedHashJoins.cpp
assignment-4-vectorization-main/: Makefile  ReadMe.md  plot_mandelbrot.py  plot_tolowercase.py  report.md  tester  vector
assignment-5-c-plus-plus-main/: .gitlab-ci.yml  CMakeLists.txt  README.md  Report - Synchronization.md  perfEvent.md  plot_IPC.py  plot_clock_cycles.py  plot_instructions.py
assignment-5-c-plus-plus-main/include/: perfEvent.hpp  synchronization.hpp
assignment-5-c-plus-plus-main/lib/: gtest.cmake
assignment-5-c-plus-plus-main/src/: main.cpp
assignment-5-c-plus-plus-main/test/: synchronization.cpp
(+8 files in other folders)
